--- a/frontendQCM/package.json
+++ b/frontendQCM/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
