--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.10",
     "tslib": "^2.3.0",
